--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -39,7 +39,7 @@
     {% endif %}
 
         {% if post.collection == 'teaching' %}
-          <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: " " | date: " " }} </p>
+          <p> {{ post.type }}, <i>{{ post.venue }}</i> {{ post.date | default: " " | date: " " }} </p>
         {% elsif post.collection == 'publications' %}
           <p><i>{{ post.venue }}</i>, {{ post.date | default: " " | date: " " }} </p>
         {% elsif post.date %}
